--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,5 @@ dist-ssr
 *.sln
 *.sw?
 
-# ONNX Models (too large for git, download separately)
-public/models/*.onnx
+# Training models (don't commit .pt PyTorch models)
 public/models/*.pt
